# Bank_Management_system

bank_managment_system/: CMakeLists.txt  main.c
bank_managment_system/core/: logIn.c  runner.c  singUp.c  structs.c
bank_managment_system/core/headers/: logIn.h  runner.h  singUp.h  structs.h
